--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -123,7 +123,7 @@
 
 <header class="border-bottom mb-4 pb-3">
 		<div class="form-inline">
-			<span class="mr-md-auto"><b>{{products.count}}</b> Items found </span>
+			<span class="mr-md-auto"><b>{{ count }}</b> Items found </span>
 			
 		</div>
 </header><!-- sect-heading -->
@@ -144,7 +144,11 @@
 						<span class="price">${{prod.price}}</span>
 					</div> <!-- price-wrap.// -->
 				</div>
-				<a href="#" class="btn btn-block btn-primary">Add to cart </a>
+				{% if prod.stock < 1 %}
+				<h5 class="text-danger">Out of Stock</h5>	
+				{% else %}
+				<a href="{{ prod.get_url }}" class="btn btn-block btn-primary">View Details </a>
+				{% endif %}
 			</figcaption>
 		</figure>
 	</div> <!-- col.// -->
@@ -153,13 +157,26 @@
 
 
 <nav class="mt-4" aria-label="Page navigation sample">
+  {% if products.has_other_pages %}
   <ul class="pagination">
-    <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+  {% if products.has_previous %}
+    <li class="page-item"><a class="page-link" href="?page={{products.previous_page_number}}">Previous</a></li>
+  {% endif %}
+
+  {% for i in products.paginator.page_range%}
+	{% if products.number == i %}
+    <li class="page-item active"><a class="page-link" href="">{{ i }}</a></li>
+	
+	{% else %}
+	<li class="page-item"><a class="page-link" href="?page={{i}}">{{ i }}</a></li>
+	{% endif %}
+  {% endfor %}
+
+  {% if products.has_next %}
+    <li class="page-item"><a class="page-link" href="?page={{products.next_page_number}}">Next</a></li>
+  {% endif %}
   </ul>
+  {% endif %}
 </nav>
 
 	</main> <!-- col.// -->
