--- a/templates/base.html
+++ b/templates/base.html
@@ -25,29 +25,40 @@
 <link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css"/>
 <link href="{% static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)" />
 
+<link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="{% static 'js/jquery-3.3.1.min.js' %}" type="text/javascript"></script>
 
-<script type="text/javascript">
+
+<!-- PayPal Script -->\
+<script src="https://www.paypal.com/sdk/js?client-id=AdB3SeExVG4D_l4BX_s2WcaVCeFP_zdKcqr6R1ccCCbojlxqFle2wWr6U92VCSbKUmMypyRvrXOGu59y&currency=USD"></script>
+
+
+    <script type="text/javascript">
 /// some script
 
 // jquery ready start
 $(document).ready(function() {
 	// jQuery code
 
-}); 
+});
 // jquery end
 </script>
 
 </head>
 <body>
 
+  <!-- navbar -->
+  {% include 'includes/navbar.html' %}
 
-{% include 'includes/navbar.html' %} <!--navbar -->
+  {% block content %}
+  <!-- content -->
+  {% endblock %}
 
-{% block content %}
 
-
-{% endblock %}
-
-{% include 'includes/footer.html' %}' <!--footer -->
+<!-- footer -->
+{% include 'includes/footer.html' %}
