--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -137,7 +137,7 @@
                 src="{% static './images/misc/payments.png' %}"
                 height="26" />
             </p>
-            <a href="./place-order.html" class="btn btn-primary btn-block">
+            <a href="{% url 'checkout' %}" class="btn btn-primary btn-block">
               Checkout
             </a>
             <a href="{% url 'store' %}" class="btn btn-light btn-block"
