--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,8 @@
 <link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css"/>
+
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
