--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -7,11 +7,18 @@
       <div class="row no-gutters">
         <aside class="col-md-6">
           <article class="gallery-wrap">
-            <div class="img-big-wrap">
+            <div class="img-big-wrap mainImage">
               <a href="#"><img src="{{product.images.url}}" /></a>
             </div>
             <!-- img-big-wrap.// -->
           </article>
+          <ul class="thumb">
+            <li>
+              {% for image in product_gallery %}
+              <a href="{{ image.image.url }}" target="mainImage"><img src="{{ image.image.url }}" alt="Product Image"></a>
+              {% endfor %}
+            </li>
+          </ul>
           <!-- gallery-wrap .end// -->
         </aside>
         <main class="col-md-6 border-left">
